# backend/src/game/dto/get-stats.dto.ts
@@ -1,0 +1,7 @@
+import { GameMode } from "@prisma/client";
+import { ApiProperty } from "@nestjs/swagger";
+
+export class GetStatsDto {
+    @ApiProperty({ description: "The game mode", enum: GameMode })
+    mode: GameMode;
+}
